Cover exact-punishment rate replay scoping